added mod 5, reimplemented dashboard

--- a/src/CSS/Dashboard.css
+++ b/src/CSS/Dashboard.css
@@ -7,7 +7,7 @@
   align-items: center;
   margin-bottom: 4%;
   border-radius: 10px;
-  box-shadow: 5px 5px 50px 10px grey;
+  /* box-shadow: 5px 5px 50px 10px grey; */
   color: black;
 }
 .lineUp {
